implements delete function
